fix(gpth-settings): Reduce spacings in GPThemes Settings

--- a/src/sass/gpthemes/theme-manager/components/_fonts.scss
+++ b/src/sass/gpthemes/theme-manager/components/_fonts.scss
@@ -1,7 +1,7 @@
 .fonts {
     &__props {
         display: grid;
-        gap: 1.5rem;
+        gap: 0.8rem;
     }
 
     &__bigcards-wrapper,
